# defi-risk-reasoner

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  NOTES.md  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: PREPRINT.md
docs/transcripts/: README.md
eval/: positions.jsonl  score.py
src/risk_reasoner/: cli.py  prompts.py  report.py  runner.py
src/risk_reasoner/llm/: agent.py  client.py
src/risk_reasoner/tools/: aave.py  erc20.py  governance.py  liquidation.py  morpho.py  oracle.py  oracle_audit.py  registry.py  scenarios.py
tests/: test_agent_loop.py  test_tools.py
