[project]
name = "defi-risk-reasoner"
version = "0.3.0"
description = "LLM agent that reasons about DeFi position risk."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Wei Han Tan" }]
dependencies = [
    "anthropic>=0.34",
    "web3>=6.11",
    "requests>=2.31",
    "pydantic>=2.5",
    "click>=8.1",
    "rich>=13.7",
]

[project.scripts]
risk-reasoner = "risk_reasoner.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
